cambio de  carpeta de  archivo js

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,6 +13,7 @@
             <a href="/upload">Subir Archivo</a> |
             <a href="/login">Login</a> |
             <a href="/inventario">Inventario</a>
+            <a href="/dashboard">Dashboard</a>
         </nav>
     </header>
 
