--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
             <a href="/">Inicio</a> |
             <a href="/upload">Subir Archivo</a> |
             <a href="/login">Login</a> |
-            <a href="/inventario">Inventario</a>
+            <a href="/inventario">Inventario</a> |
             <a href="/dashboard">Dashboard</a>
         </nav>
     </header>
