--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>{% block title %}Inventariate{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-gauge/dist/chartjs-gauge.js"></script>
 </head>
 <body>
     <header>
