--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -11,11 +11,16 @@
     <header>
         <h1>Inventariate</h1>
         <nav>
-            <a href="/">Inicio</a> |
-            <a href="/upload">Subir Archivo</a> |
-            <a href="/login">Login</a> |
-            <a href="/inventario">Inventario</a> |
-            <a href="/dashboard">Dashboard</a>
+            <a href="{{ url_for('main.dashboard') }}">Dashboard</a>
+            <a href="{{ url_for('main.inventario') }}">Inventario</a>
+            <a href="{{ url_for('main.upload') }}">Subir Archivo</a>
+            <a href="{{ url_for('main.generar_pdf_route') }}">Generar Reporte</a>
+            {% if current_user.is_authenticated %}
+                <a href="{{ url_for('main.history') }}">Historial</a>
+                <a href="{{ url_for('main.logout') }}">Cerrar Sesión</a>
+            {% else %}
+                <a href="{{ url_for('main.login') }}">Iniciar Sesión</a>
+            {% endif %}
         </nav>
     </header>
 
