--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %}
-{% block title %}Iniciar Sesión{% endblock %}
+{% block title %}Registrarse{% endblock %}
 
 {% block content %}
     <main>
-        <h2>Iniciar Sesión</h2>
-        <form method="POST" action="{{ url_for('main.login') }}">
+        <h2>Crear una Cuenta</h2>
+        <form method="POST" action="{{ url_for('main.register') }}">
             <div>
                 <label for="username">Nombre de Usuario:</label>
                 <input type="text" id="username" name="username" required>
@@ -13,8 +13,7 @@
                 <label for="password">Contraseña:</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <button type="submit" class="button">Iniciar Sesión</button>
+            <button type="submit" class="button">Registrarse</button>
         </form>
-        <p>¿Aún no tienes una cuenta? <a href="{{ url_for('main.register') }}">Regístrate aquí</a>.</p>
     </main>
 {% endblock %}
